# acoustic-traffic-simulation-counting

./: .gitignore  3rd-party-licenses.txt  README.md  pyproject.toml
atsc/: __init__.py
atsc/configs/: baseline.yaml
atsc/configs/env/: dev.yaml
atsc/configs/model/: baseline.yaml
atsc/configs/training/train_dataset/: real.yaml  sim.yaml
atsc/configs/training/val_dataset/: real.yaml  sim.yaml
atsc/counting/: __init__.py  data.py  evaluation.py  inference.py  training.py
atsc/counting/models/: __init__.py  baseline.py  gcc.py
atsc/modeling/: __init__.py  traffic.py
atsc/simulation/: __init__.py  events.py  pyoctaveband.py  source_synthesis.py
